--- a/simple.html
+++ b/simple.html
@@ -1,4 +1,7 @@
 <!DOCTYPE html>
+<!--
+    Copyright blablabla
+-->
 <head>
 	<title>Exmaple web</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
