--- a/simple.html
+++ b/simple.html
@@ -3,7 +3,7 @@
     Copyright blablabla
 -->
 <head>
-	<title>Exmaple web</title>
+	<title>new great website</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
@@ -17,11 +17,11 @@
 	<main class="container">
 	<!-- Content Goes Here -->
 		<p>
-			Just some content2
+			some text blablabla
 		</p>
 	</main>
 	<footer class="container">
-		<p>&copy; Company 2014</p>
+		<p>&copy; KET test 2014</p>
 	</footer>
 </body>
 </html>
