Adding conflicting changes for example I hoe this works

--- a/simple.html
+++ b/simple.html
@@ -3,7 +3,7 @@
     Copyright blablabla
 -->
 <head>
-	<title>Exmaple web</title>
+	<title>very respectful website</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
@@ -17,11 +17,12 @@
 	<main class="container">
 	<!-- Content Goes Here -->
 		<p>
-			Just some content2
+			my content is better
+			and better
 		</p>
 	</main>
 	<footer class="container">
-		<p>&copy; Company 2014</p>
+		<p>&copy; some company</p>
 	</footer>
 </body>
 </html>
