--- a/simple.html
+++ b/simple.html
@@ -18,9 +18,7 @@
 	<main class="container">
 	<!-- Content Goes Here -->
 		<p>
-			some text blablabla
-			my content is better
-			and better
+			trouble
 		</p>
 	</main>
 	<footer class="container">
