mb conflicting changes brewing

--- a/simple.html
+++ b/simple.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <!--
     Copyright blablabla
+    Some silly changes from master branch
 -->
 <head>
 	<title>very respectful website</title>
