Done with simple.html update

--- a/simple.html
+++ b/simple.html
@@ -3,7 +3,7 @@
     Copyright blablabla
 -->
 <head>
-	<title>very respectful website</title>
+	<title>Update title for stash example</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
@@ -17,7 +17,7 @@
 	<main class="container">
 	<!-- Content Goes Here -->
 		<p>
-			trouble
+			Adding more stuff
 		</p>
 	</main>
 	<footer class="container">
