--- a/simple.html
+++ b/simple.html
@@ -3,7 +3,7 @@
     Copyright blablabla
 -->
 <head>
-	<title>Update title for stash branch example</title>
+	<title>Update title for tagging compare example</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
